{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 29,
  "lineage": "ce5a41e2-84ff-3284-c6e3-4ef2b10e182a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-test-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e7b7780152dcf832",
            "domain": "vpc",
            "id": "eipalloc-00819e471e2b84307",
            "instance": "i-09e70a9ae09391603",
            "network_interface": "eni-0a2510c0111718e77",
            "private_dns": "ip-10-0-53-18.ec2.internal",
            "private_ip": "10.0.53.18",
            "public_dns": "ec2-52-204-12-241.compute-1.amazonaws.com",
            "public_ip": "52.204.12.241",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.test-ec2-instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-ec2-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:750461308246:instance/i-09e70a9ae09391603",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09e70a9ae09391603",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demokey",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2510c0111718e77",
            "private_dns": "ip-10-0-53-18.ec2.internal",
            "private_ip": "10.0.53.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06fb40baf2b93b177",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-043f85b5135987768"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a378322507a8f3a",
            "tags": {
              "Name": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-043f85b5135987768"
            ]
          },
          "depends_on": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-040ab35488ced196a",
            "owner_id": "750461308246",
            "tags": {
              "Name": "test-env-gw"
            },
            "vpc_id": "vpc-05842f42a20366f39"
          },
          "depends_on": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dd2ea6ce42294586",
            "owner_id": "750461308246",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-040ab35488ced196a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-env-route-table"
            },
            "vpc_id": "vpc-05842f42a20366f39"
          },
          "depends_on": [
            "aws_internet_gateway.test-env-gw",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b626eac17e92906a",
            "route_table_id": "rtb-0dd2ea6ce42294586",
            "subnet_id": "subnet-00a378322507a8f3a"
          },
          "depends_on": [
            "aws_route_table.route-table-test-env",
            "aws_subnet.subnet-uno"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750461308246:security-group/sg-043f85b5135987768",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043f85b5135987768",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": null,
            "owner_id": "750461308246",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-05842f42a20366f39"
          },
          "depends_on": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750461308246:subnet/subnet-00a378322507a8f3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-00a378322507a8f3a",
            "map_public_ip_on_launch": false,
            "owner_id": "750461308246",
            "vpc_id": "vpc-05842f42a20366f39"
          },
          "depends_on": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750461308246:vpc/vpc-05842f42a20366f39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00bc34942f60c09df",
            "default_route_table_id": "rtb-0a0d5075a420658ee",
            "default_security_group_id": "sg-0d9688079a31e7ccd",
            "dhcp_options_id": "dopt-0b682f654d05587a1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05842f42a20366f39",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a0d5075a420658ee",
            "owner_id": "750461308246",
            "tags": {
              "Name": "test-env"
            }
          }
        }
      ]
    }
  ]
}